--- a/.swiftpm/xcode/xcshareddata/xcschemes/RefdsShared.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/RefdsShared.xcscheme
@@ -21,6 +21,20 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "RefdsAlgorithmTests"
+               BuildableName = "RefdsAlgorithmTests"
+               BlueprintName = "RefdsAlgorithmTests"
+               ReferencedContainer = "container:../refds-algorithm">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
