--- a/.swiftpm/xcode/xcshareddata/xcschemes/RefdsShared.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/RefdsShared.xcscheme
@@ -29,10 +29,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "RefdsAlgorithmTests"
-               BuildableName = "RefdsAlgorithmTests"
-               BlueprintName = "RefdsAlgorithmTests"
-               ReferencedContainer = "container:../refds-algorithm">
+               BlueprintIdentifier = "RefdsSharedTests"
+               BuildableName = "RefdsSharedTests"
+               BlueprintName = "RefdsSharedTests"
+               ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -44,14 +44,13 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <TestPlans>
          <TestPlanReference
-            reference = "container:.swiftpm/RefdsShared.xctestplan"
+            reference = "container:.swiftpm/RefdsSharedTestPlan.xctestplan"
             default = "YES">
          </TestPlanReference>
       </TestPlans>
       <Testables>
          <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
+            skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "RefdsSharedTests"
