--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -16,9 +16,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - uses: swift-actions/setup-swift@v1
+    - uses: SwiftyLab/setup-swift@latest
       with:
-        swift-version: "5.9"
+        swift-version: "6.0.0"
     - name: Get swift version
       run: swift --version
     - name: Build
